Fixed bug where if there were no posts on page, category dropdown was too long for body element.

--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -19,6 +19,7 @@ p {
 body { 
     background-color: var(--background-colour);
     margin: 0px;
+    min-height: 50vh;
 }
 
 html, body {
